@@ -30,8 +30,9 @@ GitHub.
 
 # COPYRIGHT AND LICENCE
 
-Copyright (C) 2023 Johan Vromans
+Copyright (C) 2022,2023 Johan Vromans
 
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
+Redistribution and use in source and binary forms, with or without
+modification, are permitted provided under the terms of the Simplified
+BSD License.
 
